terraform/basic_1_infra101/route.tf

## Need to study this page.
resource "aws_route_table" "DemobasicPublic_RTB" {
  vpc_id = aws_vpc.basicvpc.id
  tags = {
    "Source" = var.source-tag
  }
  # Specify IGW. 
  route {
    gateway_id = aws_internet_gateway.basic_igw.id
    cidr_block = "0.0.0.0/0"
    # This CIDR block is the destination route match. 
    # Route tables define next hop, not permissions. 
  }
}

# Pair specific subnet. 
resource "aws_route_table_association" "DemoRouteAssociation-1" {
  route_table_id = aws_route_table.DemobasicPublic_RTB.id
  subnet_id      = aws_subnet.basic_subnet1.id
}

resource "aws_route_table_association" "DemoRouteAssociation-2" {
  route_table_id = aws_route_table.DemobasicPublic_RTB.id
  subnet_id      = aws_subnet.basic_subnet2.id
}


#A subnet becomes public when its associated route table has a default route 0.0.0.0/0 pointing to an Internet Gateway. 
  #A public IP is not what makes the subnet public; 
   #it makes the EC2 instance reachable from the internet when SG/NACL rules also allow traffic.
